# ChineseChessLib

./: .gitignore  CMakeLists.txt  LICENSE  py_interface.cpp  pyproject.toml  setup.py
.github/workflows/: publish.yml
include/: board.h
src/: move.cpp  rule.cpp
tests/: basic_test.py
